--- a/orbit-launcher-elite/orbit-elite/other/speed-dial.html
+++ b/orbit-launcher-elite/orbit-elite/other/speed-dial.html
@@ -214,7 +214,7 @@
 </head>
 
 <body>
-  <a href="../index.html" class="closebtn" id="Close">&times;</a>
+  <a href="../index.html#settings" class="closebtn" id="Close">&times;</a>
   <h1>Speed Dial Values</h1>
 
   <div class="middle">
@@ -243,38 +243,38 @@
         <i id="dial5" class=""></i>
       </a>
       </input></label>
-      <br>
-      <div style="position: relative; right: 6px;">
-        <label><input type="radio" name="Type">
-          <a id="dial6p" class="btn">
-            <i id="dial6" class=""></i>
-          </a>
-          </input></label>
+    <br>
+    <div style="position: relative; right: 6px;">
+      <label><input type="radio" name="Type">
+        <a id="dial6p" class="btn">
+          <i id="dial6" class=""></i>
+        </a>
+        </input></label>
 
-        <label><input type="radio" name="Type">
-          <a id="dial7p" class="btn">
-            <i id="dial7" class=""></i>
-          </a>
-          </input></label>
+      <label><input type="radio" name="Type">
+        <a id="dial7p" class="btn">
+          <i id="dial7" class=""></i>
+        </a>
+        </input></label>
 
-        <label><input type="radio" name="Type">
-          <a id="dial8p" class="btn">
-            <i id="dial8" class=""></i>
-          </a>
-          </input></label>
+      <label><input type="radio" name="Type">
+        <a id="dial8p" class="btn">
+          <i id="dial8" class=""></i>
+        </a>
+        </input></label>
 
-        <label><input type="radio" name="Type">
-          <a id="dial9p" class="btn">
-            <i id="dial9" class=""></i>
-          </a>
-          </input></label>
+      <label><input type="radio" name="Type">
+        <a id="dial9p" class="btn">
+          <i id="dial9" class=""></i>
+        </a>
+        </input></label>
 
-        <label><input type="radio" name="Type">
-          <a id="dial10p" class="btn">
-            <i id="dial10" class=""></i>
-          </a>
-          </input></label>
-      </div>
+      <label><input type="radio" name="Type">
+        <a id="dial10p" class="btn">
+          <i id="dial10" class=""></i>
+        </a>
+        </input></label>
+    </div>
   </div>
   <div class="options">
     <div id="item">
