--- a/orbit-launcher-elite/orbit-elite/index.html
+++ b/orbit-launcher-elite/orbit-elite/index.html
@@ -17,15 +17,13 @@
     <a class="fas fa-cog accentCol" id="settingsOpen"></a>
     <!--<a class="fas fa-redo-alt accentCol" id="reloadButton"></a>-->
     <div id="MyClockDisplay" class="clock accentCol"></div>
-
     <div id="DateDisplay" class="Date accentCol"></div>
 
     <form class="form" id="searchForm" action="https://www.google.com/search" method="GET">
-
       <input type="text" name="q" autocomplete="off" autocorrect="off" autocapitalize="off" class="omnibox accentCol backgroundCol" id="inputBox" placeholder="">
       <label id="globe"><button type="submit" alt="Submit" class="submit fas fa-globe-americas accentCol" id="sub"></button></label>
-
     </form>
+
     <div id="AllDials">
       <div id="middle" class="middle">
         <a class="btn backgroundCol accentCol" id="dial1p">
@@ -66,7 +64,6 @@
     <div class="MiscText accentCol" id="MiscText"></div>
 
     <div class="Todo sideBackground" id="List">
-
       <a href="javascript:void(0)" class="closebtn sideAccent hoverRotate" id="todoClose">&times;</a>
       <div class="sideAccent" style="font-size:10px;position:absolute;top:30px;right:10px;">Close</div>
       <h6 class="sideAccent">To-do List</h6>
@@ -96,7 +93,7 @@
     <div class="Sett sideBackground" id="Settings">
       <div class="sideSettings backgroundCol">
         <h4 class="accentCol">Orbit Newtab</h4>
-        <h4 class="accentCol SettingsSelection" id="OpenvisualSettings"><i class="fas fa-palette sideIcon"></i> Visual</h4>
+        <h4 class="accentCol SettingsSelection" id="OpenvisualSettings"><i class="fas fa-palette sideIcon"></i></h4>
         <h4 class="accentCol SettingsSelection" id="OpencontentSettings"><i class="fas fa-image sideIcon"></i> Content</h4>
         <h4 class="accentCol SettingsSelection" id="OpenspeedDialSettings"><i class="fas fa-circle sideIcon"></i> Speed Dials</h4>
         <h4 class="accentCol SettingsSelection" id="OpenWidgetsettings"> <i class="fas fa-puzzle-piece sideIcon"></i> Widgets</h4>
@@ -183,10 +180,8 @@
               </div>
             </div>
             <div class="column">
-
             </div>
             <div class="column">
-
             </div>
           </div>
         </div>
@@ -241,11 +236,8 @@
               </div>
             </div>
             <div class="column">
-
             </div>
           </div>
-
-
         </div>
         <div class="SettingsSection" id="speedDialSettings">
           <h4 class="accentCol">Speed Dial Options</h4>
@@ -275,68 +267,50 @@
           <h4 class="accentCol">Widgets</h4>
           <div class="row">
             <div class="column">
-
               <h3 class="accentCol">Tasks On/Off</h3>
               <div id="taskOptions">
-
                 <label class="accentCol">Tasks Off</label>
                 <label class="NoTop"><input type="checkbox" class="sideBackground" id="taskToggle" checked>
                 <label class="accentCol">Tasks On</label>
-
               </div>
             </div>
             <div class="column">
-
               <h3 class="accentCol">RSS Feed On/Off</h3>
               <div id="RSS">
-
                 <label class="accentCol">RSS Off</label>
                 <label class="NoTop"><input type="checkbox" class="sideBackground" id="rssToggle" checked>
                 <label class="accentCol">RSS On</label>
-
               </div>
             </div>
             <div class="column">
-
               <h3 class="accentCol">Weather On/Off</h3>
               <div id="weatherOptions">
-
                 <label class="accentCol">Weather Off</label>
                 <label class="NoTop"><input type="checkbox" class="sideBackground" id="weatherToggle">
                 <label class="accentCol">Weather On</label>
-
               </div>
             </div>
           </div>
           <div class="row">
             <div class="column">
-
               <h3 class="accentCol">Weather Celsius/Fahrenheit</h3>
               <div id="weatherOptions">
-
                 <label class="accentCol">C</label>
                 <label class="NoTop"><input type="checkbox" class="sideBackground" id="tempToggle" checked>
                 <label class="accentCol">F</label>
-
               </div>
             </div>
             <div class="column">
-
               <h3 class="accentCol">Misc Text</h3>
               <select id="MiscTextSett" class="setFont button sideBackground sideAccent">
                 <option class="setFont" value="None">None</option>
                 <option class="setFont" value="Weather">Weather</option>
                 <option class="setFont" value="Quote">Quote</option>
               </select>
-
             </div>
             <div class="column">
-
             </div>
           </div>
-
-
-
         </div>
         <div class="SettingsSection" id="otherSettings">
           <h3 class="accentCol">Search Engine</h3>
@@ -380,10 +354,8 @@
           <p id="mContent" class="accentCol"></p>
         </div>
       </div>
-
     </div>
   </div>
-
   <!--Leave This Here PLS-->
   <div class="RSS sideBackground" id="RssSide">
     <a href="javascript:void(0)" class="closebtn sideAccent hoverRotate" id="rssClose">&times;</a>
