--- a/orbit-launcher-elite/orbit-elite/index.html
+++ b/orbit-launcher-elite/orbit-elite/index.html
@@ -1,4 +1,5 @@
 <html>
+
 <head>
   <title>Orbit</title>
   <meta charset="utf-8">
@@ -8,6 +9,7 @@
   <link href="https://fonts.googleapis.com/css?family=Concert+One|Fredoka+One|Indie+Flower|Josefin+Sans|Open+Sans|PT+Serif|Poppins|Raleway" rel="stylesheet">
   <link rel="stylesheet" href="other/fontawesome/css/all.css">
 </head>
+
 <body class="backgroundCol" id="body">
   <div id="bg"></div>
   <div class="content">
@@ -186,6 +188,13 @@
               </div>
             </div>
             <div class="column">
+              <h3 class="accentCol">NASA background On/Off</h3>
+              <h4 class="accentCol"><i class="fas fa-moon"></i></h4>
+              <div class="accentCol" id="clockContent">
+                <label class="accentCol">Off</label>
+                <label class="NoTop"><input type="checkbox" class="sideBackground" id="nasa">
+                  <label class="accentCol">On</label>
+              </div>
             </div>
             <div class="column">
             </div>
@@ -200,7 +209,7 @@
               <div class="accentCol" id="clockContent">
                 <label class="accentCol">Off</label>
                 <label class="NoTop"><input type="checkbox" checked class="sideBackground" id="clockCheck">
-                <label class="accentCol">On</label>
+                  <label class="accentCol">On</label>
               </div>
             </div>
             <div class="column">
@@ -209,7 +218,7 @@
               <div id="dateMode">
                 <label class="accentCol">Off</label>
                 <label class="NoTop"><input type="checkbox" class="sideBackground" id="displaydate">
-                <label class="accentCol">On</label>
+                  <label class="accentCol">On</label>
               </div>
             </div>
             <div class="column">
@@ -218,7 +227,7 @@
               <div class="accentCol" id="searchContent">
                 <label class="accentCol">Off</label>
                 <label class="NoTop"><input type="checkbox" checked class="sideBackground" id="searchCheck">
-                <label class="accentCol">On</label>
+                  <label class="accentCol">On</label>
               </div>
             </div>
           </div>
@@ -229,7 +238,7 @@
               <div id="submitOptions">
                 <label class="accentCol">Off</label>
                 <label class="NoTop"><input type="checkbox" class="sideBackground" id="submitToggle" checked>
-                <label class="accentCol">On</label>
+                  <label class="accentCol">On</label>
               </div>
             </div>
             <div class="column">
@@ -238,7 +247,7 @@
               <div class="accentCol" id="dialContent">
                 <label class="accentCol">Off</label>
                 <label class="NoTop"><input type="checkbox" checked class="sideBackground" id="dialCheck">
-                <label class="accentCol">On</label>
+                  <label class="accentCol">On</label>
               </div>
             </div>
             <div class="column">
@@ -264,7 +273,7 @@
               <div id="speedDialShapeOptions">
                 <label class="accentCol">Square</label>
                 <label class="NoTop"><input type="checkbox" class="sideBackground" id="shapeToggle">
-                <label class="accentCol">Circle</label>
+                  <label class="accentCol">Circle</label>
               </div>
             </div>
           </div>
@@ -277,7 +286,7 @@
               <div id="taskOptions">
                 <label class="accentCol">Tasks Off</label>
                 <label class="NoTop"><input type="checkbox" class="sideBackground" id="taskToggle" checked>
-                <label class="accentCol">Tasks On</label>
+                  <label class="accentCol">Tasks On</label>
               </div>
             </div>
             <div class="column">
@@ -285,7 +294,7 @@
               <div id="RSS">
                 <label class="accentCol">RSS Off</label>
                 <label class="NoTop"><input type="checkbox" class="sideBackground" id="rssToggle" checked>
-                <label class="accentCol">RSS On</label>
+                  <label class="accentCol">RSS On</label>
               </div>
             </div>
             <div class="column">
@@ -293,7 +302,7 @@
               <div id="weatherOptions">
                 <label class="accentCol">Weather Off</label>
                 <label class="NoTop"><input type="checkbox" class="sideBackground" id="weatherToggle">
-                <label class="accentCol">Weather On</label>
+                  <label class="accentCol">Weather On</label>
               </div>
             </div>
           </div>
@@ -303,7 +312,7 @@
               <div id="weatherOptions">
                 <label class="accentCol">C</label>
                 <label class="NoTop"><input type="checkbox" class="sideBackground" id="tempToggle" checked>
-                <label class="accentCol">F</label>
+                  <label class="accentCol">F</label>
               </div>
             </div>
             <div class="column">
@@ -332,7 +341,7 @@
           <div class="accentCol" id="clockMode">
             <label class="accentCol">24 Hour Clock</label>
             <label class="NoTop"><input type="checkbox" class="sideBackground" id="check">
-            <label class="accentCol">12 Hour Clock</label>
+              <label class="accentCol">12 Hour Clock</label>
           </div>
         </div>
       </div>
@@ -381,4 +390,5 @@
     <br />
   </div>
 </body>
+
 </html>
