--- a/orbit-launcher-elite/orbit-elite/index.html
+++ b/orbit-launcher-elite/orbit-elite/index.html
@@ -311,7 +311,7 @@
               <h3 class="accentCol">Weather Celsius/Fahrenheit</h3>
               <div id="weatherOptions">
                 <label class="accentCol">C</label>
-                <label class="NoTop"><input type="checkbox" class="sideBackground" id="tempToggle" checked>
+                <label class="NoTop"><input type="checkbox" class="sideBackground" id="tempToggle">
                   <label class="accentCol">F</label>
               </div>
             </div>
@@ -382,6 +382,7 @@
     <script id="RSSFEED"></script>
     <script src="other/ripple/ripple.js"></script>
     <script src="script.js"></script>
+    <div id="ScriptLoader"></div>
     <br />
     <br />
     <br />
