--- a/orbit-launcher-elite/orbit-elite/index.html
+++ b/orbit-launcher-elite/orbit-elite/index.html
@@ -276,6 +276,7 @@
                   <label class="accentCol">Circle</label>
               </div>
             </div>
+            <iframe src="other/speed-dial.html" width="100%" height="100%"></iframe>
           </div>
         </div>
         <div class="SettingsSection" id="Widgetsettings">
