--- a/orbit-launcher-elite/orbit-elite/index.html
+++ b/orbit-launcher-elite/orbit-elite/index.html
@@ -127,13 +127,17 @@
               <h3 class="accentCol">Background Color</h3>
               <label><input type="color" id="background" class="borderless" value="#FFFFFF"></input>
                 <link class="rippleJS fill color"></label>
-              <label class="NoTop"><input type="text" class="colorInput sideAccent sideBackground" id="backgroundBox" spellcheck="false" maxlength="7"></input></label>
+                <br>
+                <br>
+              <label class="NoTop"><input type="text" class="button colorInput sideAccent sideBackground" id="backgroundBox" spellcheck="false" maxlength="7"></input></label>
             </div>
             <div class="column">
               <h3 class="accentCol">Text Color</h3>
               <label class="NoTop"><input type="color" id="accent" value="#1976D2"></input>
                 <link class="rippleJS fill color"></label>
-              <label class="NoTop"><input type="text" class="colorInput sideAccent sideBackground" id="accentBox" spellcheck="false" maxlength="7"></input></label>
+                <br>
+                <br>
+              <label class="NoTop"><input type="text" class="button colorInput sideAccent sideBackground" id="accentBox" spellcheck="false" maxlength="7"></input></label>
             </div>
             <div class="column">
               <h3 class="accentCol">Background Image</h3>
@@ -277,6 +281,120 @@
               </div>
             </div>
           </div>
+          <div class="speedDialValues">
+            <br>
+            <br>
+            <br>
+            <br>
+
+            <div class="sdSettingsMiddle">
+              <label><input type="radio" name="Type" checked>
+                <a id="dial1p" class="accentCol backgroundCol sdbtn">
+                  <i id="dial1"></i>
+                </a>
+                </input></label>
+              <label><input type="radio" name="Type">
+                <a id="dial2p" class="accentCol backgroundCol sdbtn">
+                  <i id="dial2"></i>
+                </a>
+                </input></label>
+              <label><input type="radio" name="Type">
+                <a id="dial3p" class="accentCol backgroundCol sdbtn">
+                  <i id="dial3"></i>
+                </a>
+                </input></label>
+              <label><input type="radio" name="Type">
+                <a id="dial4p" class="accentCol backgroundCol sdbtn">
+                  <i id="dial4"></i>
+                </a>
+                </input></label>
+              <label><input type="radio" name="Type">
+                <a id="dial5p" class="accentCol backgroundCol sdbtn">
+                  <i id="dial5" class=""></i>
+                </a>
+                </input></label>
+              <br>
+              <div>
+                <label><input type="radio" name="Type">
+                  <a id="dial6p" class="accentCol backgroundCol sdbtn">
+                    <i id="dial6" class=""></i>
+                  </a>
+                  </input></label>
+
+                <label><input type="radio" name="Type">
+                  <a id="dial7p" class="accentCol backgroundCol sdbtn">
+                    <i id="dial7" class=""></i>
+                  </a>
+                  </input></label>
+
+                <label><input type="radio" name="Type">
+                  <a id="dial8p" class="accentCol backgroundCol sdbtn">
+                    <i id="dial8" class=""></i>
+                  </a>
+                  </input></label>
+
+                <label><input type="radio" name="Type">
+                  <a id="dial9p" class="accentCol backgroundCol sdbtn">
+                    <i id="dial9" class=""></i>
+                  </a>
+                  </input></label>
+
+                <label><input type="radio" name="Type">
+                  <a id="dial10p" class="accentCol backgroundCol sdbtn">
+                    <i id="dial10" class=""></i>
+                  </a>
+                  </input></label>
+              </div>
+            </div>
+            <br>
+            <br>
+            <br>
+            <br>
+            <button id="myBtn"><a class="accentCol backgroundCol sdbtn" id="myA"><i class="fas fa-plus"></i></a></button>
+            <br>
+            <br>
+            <div class="options">
+              <div id="item">
+                <label><input name="item" alt="https://facebook.com" type="radio" value="facebook-f" id="facebook"><a class="accentCol backgroundCol sdbtn"><i class="fab fa-facebook-f"></i></a></label>
+                <label><input name="item" alt="https://github.com" type="radio" value="github-alt" id="github"><a class="accentCol backgroundCol sdbtn"><i class="fab fa-github-alt"></i></a></label>
+                <label><input name="item" alt="https://dropbox.com" type="radio" value="dropbox" id="dropbox"><a class="accentCol backgroundCol sdbtn"><i class="fab fa-dropbox"></i></a></label>
+                <label><input name="item" alt="https://deviantart.com" type="radio" value="deviantart" id="deviantart"><a class="accentCol backgroundCol sdbtn"><i class="fab fa-deviantart"></i></a></label>
+                <label><input name="item" alt="http://discordapp.com/channels/@me" type="radio" value="discord" id="discord"><a class="accentCol backgroundCol sdbtn"><i class="fab fa-discord"></i></a></label>
+                <label><input name="item" alt="https://google.com" type="radio" value="google" id="google"><a class="accentCol backgroundCol sdbtn"><i class="fab fa-google"></i></a></label>
+                <label><input name="item" alt="https://drive.google.com" type="radio" value="google-drive" id="drive"><a class="accentCol backgroundCol sdbtn"><i class="fab fa-google-drive"></i></a></label>
+                <label><input name="item" alt="https://play.google.com" type="radio" value="google-play" id="play"><a class="accentCol backgroundCol sdbtn"><i class="fab fa-google-play"></i></a></label>
+                <label><input name="item" alt="https://linkedin.com" type="radio" value="linkedin" id="linked"><a class="accentCol backgroundCol sdbtn"><i class="fab fa-linkedin"></i></a></label>
+                <label><input name="item" alt="https://pinterest.com" type="radio" value="pinterest-p" id="pin"><a class="accentCol backgroundCol sdbtn"><i class="fab fa-pinterest-p"></i></a></label>
+                <label><input name="item" alt="https://reddit.com" type="radio" value="reddit-alien" id="reddit"><a class="accentCol backgroundCol sdbtn"><i class="fab fa-reddit-alien"></i></a></label>
+                <label><input name="item" alt="https://snapchat.com" type="radio" value="snapchat-ghost" id="snap"><a class="accentCol backgroundCol sdbtn"><i class="fab fa-snapchat-ghost"></i></a></label>
+                <label><input name="item" alt="https://twitter.com" type="radio" value="twitter" id="twitter"><a class="accentCol backgroundCol sdbtn"><i class="fab fa-twitter"></i></a></label>
+                <label><input name="item" alt="https://youtube.com" type="radio" value="youtube" id="youtube"><a class="accentCol backgroundCol sdbtn"><i class="fab fa-youtube"></i></a></label>
+                <label><input name="item" alt="https://mail.google.com" type="radio" value="mail" id="mail"><a class="accentCol backgroundCol sdbtn"><i class="fas fa-envelope"></i></a></label>
+                <label><input name="item" alt="https://instagram.com" type="radio" value="instagram" id="insta"><a class="accentCol backgroundCol sdbtn"><i class="fab fa-instagram"></i></a></label>
+                <label><input name="item" alt="https://twitch.tv" type="radio" value="twitch" id="twitch"><a class="accentCol backgroundCol sdbtn"><i class="fab fa-twitch"></i></a></label>
+                <label><input name="item" alt="https://amazon.com" type="radio" value="amazon" id="amazon"><a class="accentCol backgroundCol sdbtn"><i class="fab fa-amazon"></i></a></label>
+                <label><input name="item" alt="https://ebay.com" type="radio" value="ebay" id="ebay"><a class="accentCol backgroundCol sdbtn"><i class="fab fa-ebay"></i></a></label>
+                <label><input name="item" alt="https://etsy.com" type="radio" value="etsy" id="etsy"><a class="accentCol backgroundCol sdbtn"><i class="fab fa-etsy"></i></a></label>
+                <label><input name="item" alt="https://patreon.com" type="radio" value="patreon" id="patreon"><a class="accentCol backgroundCol sdbtn"><i class="fab fa-patreon"></i></a></label>
+                <label><input name="item" alt="https://my.nintendo.com/" type="radio" value="nintendo-switch" id="nintendo"><a class="accentCol backgroundCol sdbtn"><i class="fab fa-nintendo-switch"></i></a></label>
+              </div>
+              <br />
+              <br />
+              <br />
+              <br />
+              <div id="myModal" class="modal">
+                <div class="modal-content">
+                  <span class="close">&times;</span>
+                  <div>
+                    <a class="btn"><span id="text"></span></a>
+                    <input class="button" id="Display" maxlength="3" type="text" placeholder="AbC"></input>
+                    <input class="button" id="URL" type="url" placeholder="https://example.com" pattern="https://.*" size="30" required></input>
+                    <input class="button" id="SubButton" type="submit"></input>
+                  </div>
+                </div>
+
+              </div>
+          </div>
         </div>
         <div class="SettingsSection" id="Widgetsettings">
           <h4 class="accentCol">Widgets</h4>
@@ -345,20 +463,20 @@
           </div>
         </div>
       </div>
-      <div class="settingsBottomSheet">
-        <label class="NoTop">
-          <input class="accentCol backgroundCol button" id="DoneClose" type="submit" value="Done">
-          <link class="rippleJS fill">
-        </label>
-        <label class="NoTop">
-          <button type="button" class="accentCol backgroundCol button textButton fas fa-redo-alt" id="reset"> </button>
-          <link class="rippleJS fill">
-        </label>
-        <label class="NoTop">
-          <input class="accentCol backgroundCol button" id="CancelClose" type="submit" value="Cancel">
-          <link class="rippleJS fill">
-        </label>
-      </div>
+    </div>
+    <div class="settingsBottomSheet">
+      <label class="NoTop">
+        <input class="accentCol backgroundCol button" id="DoneClose" type="submit" value="Done">
+        <link class="rippleJS fill">
+      </label>
+      <label class="NoTop">
+        <button type="button" class="accentCol backgroundCol button textButton fas fa-redo-alt" id="reset"> </button>
+        <link class="rippleJS fill">
+      </label>
+      <label class="NoTop">
+        <input class="accentCol backgroundCol button" id="CancelClose" type="submit" value="Cancel">
+        <link class="rippleJS fill">
+      </label>
     </div>
     <div id="myModal" class="modal">
       <div class="modal-content backgroundCol">
