--- a/orbit-launcher-elite/orbit-elite/index.html
+++ b/orbit-launcher-elite/orbit-elite/index.html
@@ -500,6 +500,7 @@
         <script id="RSSFEED"></script>
         <script src="other/ripple/ripple.js"></script>
         <script src="script.js"></script>
+        <script src="other/dial.js"></script>
         <br />
         <br />
         <br />
