created Dynamic loader for JS

--- a/orbit-launcher-elite/orbit-elite/index.html
+++ b/orbit-launcher-elite/orbit-elite/index.html
@@ -497,10 +497,8 @@
         <label class="NoTop">
           <input type="input" id="rssURL" class="accentCol backgroundCol button">
           <link class="rippleJS fill"></label>
+        <script src="scriptLoad.js" id='scriptLoader'></script>
         <script id="RSSFEED"></script>
-        <script src="other/ripple/ripple.js"></script>
-        <script src="script.js"></script>
-        <script src="other/dial.js"></script>
         <br />
         <br />
         <br />
