--- a/orbit-launcher-elite/orbit-elite/index.html
+++ b/orbit-launcher-elite/orbit-elite/index.html
@@ -205,7 +205,7 @@
           </div>
         </div>
         <div class="SettingsSection" id="contentSettings">
-          <h4 class="accentCol">Disable Content</h4>
+          <h4 class="accentCol">Content Disabling</h4>
           <div class="row">
             <div class="column">
               <h3 class="accentCol">Clock On/Off</h3>
@@ -236,7 +236,7 @@
             </div>
           </div>
           <div class="row">
-            <div class="column">
+            <div class="column2">
               <h3 class="accentCol">Submit Button On/Off</h3>
               <h4 class="accentCol"><i class="fas fa-globe-americas"></i></h4>
               <div id="submitOptions">
@@ -245,7 +245,7 @@
                   <label class="accentCol">On</label>
               </div>
             </div>
-            <div class="column">
+            <div class="column2">
               <h3 class="accentCol">Speed Dials On/Off</h3>
               <h4 class="accentCol"><i class="fas fa-circle"></i></h4>
               <div class="accentCol" id="dialContent">
@@ -254,9 +254,36 @@
                   <label class="accentCol">On</label>
               </div>
             </div>
-            <div class="column">
+          </div>
+          <br>
+          <br>
+          <h4 class="accentCol">Content Settings</h4>
+          <div class="row">
+            <div class="column2">
+              <h3 class="accentCol">Clock 24/12</h3>
+              <div class="accentCol" id="clockMode">
+                <label class="accentCol">24 Hour Clock</label>
+                <label class="NoTop"><input type="checkbox" class="sideBackground" id="check">
+                  <label class="accentCol">12 Hour Clock</label>
+              </div>
+            </div>
+            <div class="column2">
+              <h3 class="accentCol">Search Engine</h3>
+              <div>
+                <select id="SearchEngine" class="button sideBackground sideAccent">
+                  <option class="setFont" value="https://www.google.com/search?q=">Google</option>
+                  <option class="setFont" value="https://www.bing.com/search?q=">Bing</option>
+                  <option class="setFont" value="https://duckduckgo.com/?q=">DuckDuckGo</option>
+                  <option class="setFont" value="https://search.yahoo.com/search?q=">Yahoo</option>
+                </select>
+              </div>
             </div>
           </div>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
         </div>
         <div class="SettingsSection" id="speedDialSettings">
           <h4 class="accentCol">Speed Dial Options</h4>
@@ -289,59 +316,61 @@
 
             <div class="sdSettingsMiddle">
               <label><input type="radio" name="Type" checked>
-                <a id="dial1p" class="accentCol backgroundCol sdbtn">
-                  <i id="dial1"></i>
+                <a id="sdial1p" class="accentCol backgroundCol sdbtn">
+                  <i id="sdial1"></i>
                 </a>
                 </input></label>
               <label><input type="radio" name="Type">
-                <a id="dial2p" class="accentCol backgroundCol sdbtn">
-                  <i id="dial2"></i>
+                <a id="sdial2p" class="accentCol backgroundCol sdbtn">
+                  <i id="sdial2"></i>
                 </a>
                 </input></label>
               <label><input type="radio" name="Type">
-                <a id="dial3p" class="accentCol backgroundCol sdbtn">
-                  <i id="dial3"></i>
+                <a id="sdial3p" class="accentCol backgroundCol sdbtn">
+                  <i id="sdial3"></i>
                 </a>
                 </input></label>
               <label><input type="radio" name="Type">
-                <a id="dial4p" class="accentCol backgroundCol sdbtn">
-                  <i id="dial4"></i>
+                <a id="sdial4p" class="accentCol backgroundCol sdbtn">
+                  <i id="sdial4"></i>
                 </a>
                 </input></label>
               <label><input type="radio" name="Type">
-                <a id="dial5p" class="accentCol backgroundCol sdbtn">
-                  <i id="dial5" class=""></i>
+                <a id="sdial5p" class="accentCol backgroundCol sdbtn">
+                  <i id="sdial5" class=""></i>
                 </a>
                 </input></label>
               <br>
               <div>
                 <label><input type="radio" name="Type">
-                  <a id="dial6p" class="accentCol backgroundCol sdbtn">
-                    <i id="dial6" class=""></i>
+
+                  <a id="sdial6p" class="accentCol backgroundCol sdbtn">
+                    <i id="sdial6" class=""></i>
                   </a>
                   </input></label>
 
                 <label><input type="radio" name="Type">
-                  <a id="dial7p" class="accentCol backgroundCol sdbtn">
-                    <i id="dial7" class=""></i>
+                  <a id="sdial7p" class="accentCol backgroundCol sdbtn">
+                    <i id="sdial7" class=""></i>
                   </a>
                   </input></label>
 
                 <label><input type="radio" name="Type">
-                  <a id="dial8p" class="accentCol backgroundCol sdbtn">
-                    <i id="dial8" class=""></i>
+                  <a id="sdial8p" class="accentCol backgroundCol sdbtn">
+                    <i id="sdial8" class=""></i>
                   </a>
                   </input></label>
 
                 <label><input type="radio" name="Type">
-                  <a id="dial9p" class="accentCol backgroundCol sdbtn">
-                    <i id="dial9" class=""></i>
+
+                  <a id="sdial9p" class="accentCol backgroundCol sdbtn">
+                    <i id="sdial9" class=""></i>
                   </a>
                   </input></label>
 
                 <label><input type="radio" name="Type">
-                  <a id="dial10p" class="accentCol backgroundCol sdbtn">
-                    <i id="dial10" class=""></i>
+                  <a id="sdial10p" class="accentCol backgroundCol sdbtn">
+                    <i id="sdial10" class=""></i>
                   </a>
                   </input></label>
               </div>
@@ -392,8 +421,8 @@
                     <input class="button" id="SubButton" type="submit"></input>
                   </div>
                 </div>
-
               </div>
+            </div>
           </div>
         </div>
         <div class="SettingsSection" id="Widgetsettings">
@@ -429,7 +458,7 @@
               <h3 class="accentCol">Weather Celsius/Fahrenheit</h3>
               <div id="weatherOptions">
                 <label class="accentCol">C</label>
-                <label class="NoTop"><input type="checkbox" class="sideBackground" id="tempToggle">
+                <label class="NoTop"><input type="checkbox" class="sideBackground" id="tempToggle" checked>
                   <label class="accentCol">F</label>
               </div>
             </div>
@@ -446,68 +475,54 @@
           </div>
         </div>
         <div class="SettingsSection" id="otherSettings">
-          <h3 class="accentCol">Search Engine</h3>
-          <div>
-            <select id="SearchEngine" class="button sideBackground sideAccent">
-              <option class="setFont" value="https://www.google.com/search?q=">Google</option>
-              <option class="setFont" value="https://www.bing.com/search?q=">Bing</option>
-              <option class="setFont" value="https://duckduckgo.com/?q=">DuckDuckGo</option>
-              <option class="setFont" value="https://search.yahoo.com/search?q=">Yahoo</option>
-            </select>
+          <div class="row">
+            <div class="column"></div>
+            <div class="column"></div>
+            <div class="column"></div>
           </div>
-          <h3 class="accentCol">Clock 24/12</h3>
-          <div class="accentCol" id="clockMode">
-            <label class="accentCol">24 Hour Clock</label>
-            <label class="NoTop"><input type="checkbox" class="sideBackground" id="check">
-              <label class="accentCol">12 Hour Clock</label>
+        </div>
+        <div id="myModal" class="modal">
+          <div class="modal-content backgroundCol">
+            <span id="modalClose" class="accentCol">&times;</span>
+            <div>
+              <a class="btn"><span id="text"></span></a>
+              <h2 id="mTitle" class="accentCol"></h2>
+              <p id="mContent" class="accentCol"></p>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-    <div class="settingsBottomSheet">
-      <label class="NoTop">
-        <input class="accentCol backgroundCol button" id="DoneClose" type="submit" value="Done">
-        <link class="rippleJS fill">
-      </label>
-      <label class="NoTop">
-        <button type="button" class="accentCol backgroundCol button textButton fas fa-redo-alt" id="reset"> </button>
-        <link class="rippleJS fill">
-      </label>
-      <label class="NoTop">
-        <input class="accentCol backgroundCol button" id="CancelClose" type="submit" value="Cancel">
-        <link class="rippleJS fill">
-      </label>
-    </div>
-    <div id="myModal" class="modal">
-      <div class="modal-content backgroundCol">
-        <span id="modalClose" class="accentCol">&times;</span>
-        <div>
-          <a class="btn"><span id="text"></span></a>
-          <h2 id="mTitle" class="accentCol"></h2>
-          <p id="mContent" class="accentCol"></p>
-        </div>
+      <div class="settingsBottomSheet">
+        <label class="NoTop">
+          <input class="accentCol backgroundCol button" id="DoneClose" type="submit" value="Done">
+          <link class="rippleJS fill">
+        </label>
+        <label class="NoTop">
+          <button type="button" class="accentCol backgroundCol button textButton fas fa-redo-alt" id="reset"> </button>
+          <link class="rippleJS fill">
+        </label>
+        <label class="NoTop">
+          <input class="accentCol backgroundCol button" id="CancelClose" type="submit" value="Cancel">
+          <link class="rippleJS fill">
+        </label>
       </div>
-    </div>
-  </div>
-  <!--Leave This Here PLS-->
-  <div class="RSS sideBackground" id="RssSide">
-    <a href="javascript:void(0)" class="closebtn sideAccent hoverRotate" id="rssClose">&times;</a>
-    <div class="sideAccent" style="font-size:10px;position:absolute;top:30px;right:0px;">Close</div>
-    <h6 class="sideAccent">RSS Feed</h6>
-    <label class="NoTop">
-      <input type="input" id="rssURL" class="accentCol backgroundCol button">
-      <link class="rippleJS fill"></label>
-    <script id="RSSFEED"></script>
-    <script src="other/ripple/ripple.js"></script>
-    <script src="script.js"></script>
-    <div id="ScriptLoader"></div>
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-  </div>
+      <!--Leave This Here PLS-->
+      <div class="RSS sideBackground" id="RssSide">
+        <a href="javascript:void(0)" class="closebtn sideAccent hoverRotate" id="rssClose">&times;</a>
+        <div class="sideAccent" style="font-size:10px;position:absolute;top:30px;right:0px;">Close</div>
+        <h6 class="sideAccent">RSS Feed</h6>
+        <label class="NoTop">
+          <input type="input" id="rssURL" class="accentCol backgroundCol button">
+          <link class="rippleJS fill"></label>
+        <script id="RSSFEED"></script>
+        <script src="other/ripple/ripple.js"></script>
+        <script src="script.js"></script>
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+      </div>
 </body>
-
 </html>
