Fixed Small Issues

--- a/orbit-launcher-elite/orbit-elite/index.html
+++ b/orbit-launcher-elite/orbit-elite/index.html
@@ -129,7 +129,7 @@
                 <link class="rippleJS fill color"></label>
               <br>
               <br>
-              <label class="NoTop"><input type="text" class="button colorInput sideAccent sideBackground" id="backgroundBox" spellcheck="false" maxlength="7"></input></label>
+              <label class="NoTop"><input type="text" class="button colorInput sideAccent sideBackground" id="backgroundBox" spellcheck="false" maxlength="7"></input><link class="rippleJS fill"></label>
             </div>
             <div class="column">
               <h3 class="accentCol">Text Color</h3>
@@ -137,7 +137,7 @@
                 <link class="rippleJS fill color"></label>
               <br>
               <br>
-              <label class="NoTop"><input type="text" class="button colorInput sideAccent sideBackground" id="accentBox" spellcheck="false" maxlength="7"></input></label>
+              <label class="NoTop"><input type="text" class="button colorInput sideAccent sideBackground" id="accentBox" spellcheck="false" maxlength="7"></input><link class="rippleJS fill"></label>
             </div>
             <div class="column">
               <h3 class="accentCol">Background Image</h3>
@@ -262,15 +262,20 @@
           <h4 class="accentCol">Speed Dial Options</h4>
           <div class="row">
             <div class="column">
-              <a class="sideAccent sideBackground button" type="button" href="other/speed-dial.html">Speed Dial Values
-                <link class="rippleJS fill"></a>
-            </div>
-            <div class="column">
               <h3 class="accentCol">Number Of Speed Dials</h3>
               <div class="Slider">
                 <input class="sliderRange sideBackground" id="SpeedsliderRange" type="range" min="0" max="10" value="5">
                 <span class="sliderValue accentCol" id="SpeedSliderValue">0</span>
               </div>
+            </div>
+            <div class="column">
+              <br/>
+              <br/>
+              <br/>
+              <br/>
+              <br/>
+              <br/>
+              <h4 class="accentCol">Speed Dial Values</h4>
             </div>
             <div class="column">
               <h3 class="accentCol">Speed Dials Square/Circle</h3>
@@ -482,7 +487,7 @@
         </label>
         <label class="NoTop">
           <button type="button" class="accentCol backgroundCol button textButton fas fa-redo-alt" id="reset"> </button>
-          <link class="rippleJS fill">
+          <link class="rippleJS fill color">
         </label>
         <label class="NoTop">
           <input class="accentCol backgroundCol button" id="CancelClose" type="submit" value="Cancel">
