--- a/orbit-launcher-elite/orbit-elite/index.html
+++ b/orbit-launcher-elite/orbit-elite/index.html
@@ -521,7 +521,7 @@
           <link class="rippleJS fill"></label>
         <script id="RSSFEED"></script>
         <script src="other/ripple/ripple.js"></script>
-        <script src="script.js"></script>
+        <script id="scriptLoader" src="scriptLoad.js"></script>
         <br />
         <br />
         <br />
