Added Advertisement And Changed Version

--- a/orbit-launcher-elite/orbit-elite/index.html
+++ b/orbit-launcher-elite/orbit-elite/index.html
@@ -94,7 +94,7 @@
 
     <div class="Sett sideBackground" id="Settings">
       <div class="sideSettings backgroundCol">
-        <a href="https://chrome.google.com/webstore/detail/everest/eemihbgpilllfcbhnhkobfgklfpdiiad"><h5 class="accentCol">Join The Everest Project</h5></a>
+        <a href="https://chrome.google.com/webstore/detail/everest/eemihbgpilllfcbhnhkobfgklfpdiiad"><h5 class="animateDevil" style="text-decoration: underline;">Join The Everest Project</h5></a>
         <h4 class="accentCol SettingsSelection" id="OpenvisualSettings"><i class="fas fa-palette sideIcon"></i><span class="mediaHide"> Visual</span></h4>
         <h4 class="accentCol SettingsSelection" id="OpencontentSettings"><i class="fas fa-image sideIcon"></i><span class="mediaHide"> Content</span></h4>
         <h4 class="accentCol SettingsSelection" id="OpenspeedDialSettings"><i class="fas fa-circle sideIcon"></i><span class="mediaHide"> Speed Dial</span></h4>
